Fjern resten av sts